# WEDAJ-for-A2SV-hackathon

./: README.md  build.sh  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt
WEDAJ-for-A2SV-hackathon/: db.sqlite3
WEDAJ-for-A2SV-hackathon/home/: views.py
WEDAJ-for-A2SV-hackathon/home/migrations/: 0002_alter_history_advice.py
WEDAJ-for-A2SV-hackathon/static/css/: adwa.css
WEDAJ-for-A2SV-hackathon/templates/: contact.html  index.html  login.html  register.html
WEDAJ-for-A2SV-hackathon/wedaj/: asgi.py  settings.py  urls.py
accounts/: views.py
assets/css/: adwa.css
home/: admin.py  ai.py  main.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0003_advice_history_delete_history.py
templates/: about.html  contact.html  index.html  login.html  register.html
wedaj/: settings.py  wsgi.py
